<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/margin_20dp"
        android:paddingTop="@dimen/margin_24dp"
        tools:context=".ui.HomeFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_picture_image_view"
            android:layout_width="@dimen/margin_42dp"
            android:layout_height="@dimen/margin_42dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:src="@drawable/img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/julia_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/julia_you_have_left"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toStartOf="@+id/profile_picture_image_view"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture_image_view" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="2 "
            android:textColor="#A2F0F8"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/julia_tv"
            app:layout_constraintTop_toBottomOf="@id/julia_tv" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/withdraws"
            android:textColor="#DBDDED"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/add_item_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/margin_12dp"
            android:layout_marginEnd="@dimen/margin_36dp"
            android:background="@drawable/add_button_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_picture_image_view" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:src="@drawable/ic_add_24"
            app:layout_constraintEnd_toEndOf="@+id/add_item_image_view"
            app:layout_constraintStart_toStartOf="@+id/add_item_image_view"
            app:layout_constraintTop_toTopOf="@+id/add_item_image_view" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/request"
            android:textColor="#DBDDED"
            app:layout_constraintEnd_toEndOf="@+id/add_item_image_view"
            app:layout_constraintStart_toStartOf="@+id/add_item_image_view"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/circularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/progress_bar_background"
            android:max="100"
            android:min="0"
            android:rotation="-110"
            app:indicatorColor="#A2F0F8"
            app:indicatorSize="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_item_image_view"
            app:layout_constraintVertical_bias="0.1"
            app:trackCornerRadius="@dimen/margin_5dp" />

        <TextView
            android:id="@+id/account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/account_balance"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/circularProgressIndicator"
            app:layout_constraintEnd_toEndOf="@+id/circularProgressIndicator"
            app:layout_constraintStart_toStartOf="@+id/circularProgressIndicator"
            app:layout_constraintTop_toTopOf="@+id/circularProgressIndicator"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/current_account_balance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/total_amount_tv"
            android:textColor="#A2F0F8"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="@+id/account_tv"
            app:layout_constraintStart_toStartOf="@+id/account_tv"
            app:layout_constraintTop_toBottomOf="@+id/account_tv" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/circularProgressIndicator"
            app:layout_constraintEnd_toEndOf="@+id/circularProgressIndicator"
            app:layout_constraintStart_toStartOf="@+id/circularProgressIndicator"
            app:layout_constraintTop_toBottomOf="@+id/current_account_balance_tv"
            app:layout_constraintVertical_bias="0.19999999">

            <TextView
                android:id="@+id/account_top_up_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/current_amount_tv"
                android:textColor="#DBDDED"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_up_24"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_24"
                app:layout_constraintBottom_toBottomOf="@+id/account_top_up_tv"
                app:layout_constraintEnd_toStartOf="@id/account_top_up_tv"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/account_top_up_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/latest_actions"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circularProgressIndicator" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/card_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:listitem="@layout/rv_item" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView2"
            android:layout_width="@dimen/margin_16dp"
            android:layout_height="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_30dp"
            android:background="@drawable/purple_dot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/margin_24dp"
            android:layout_height="@dimen/margin_24dp"
            android:background="@drawable/purple_dot_big"
            app:layout_constraintBottom_toBottomOf="@+id/circularProgressIndicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circularProgressIndicator"
            app:layout_constraintTop_toBottomOf="@+id/add_item_image_view" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView3"
            android:layout_width="@dimen/margin_12dp"
            android:layout_height="@dimen/margin_12dp"
            android:background="@drawable/green_dot"
            app:layout_constraintBottom_toBottomOf="@+id/add_item_image_view"
            app:layout_constraintEnd_toStartOf="@+id/add_item_image_view"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toEndOf="@+id/julia_tv"
            app:layout_constraintTop_toTopOf="@+id/add_item_image_view" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/margin_12dp"
            android:layout_height="@dimen/margin_12dp"
            android:background="@drawable/green_dot"
            app:layout_constraintBottom_toBottomOf="@+id/circularProgressIndicator"
            app:layout_constraintEnd_toStartOf="@+id/circularProgressIndicator"
            app:layout_constraintHorizontal_bias="0.30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/circularProgressIndicator" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/margin_12dp"
            android:layout_height="@dimen/margin_12dp"
            android:background="@drawable/green_dot"
            app:layout_constraintBottom_toTopOf="@+id/circularProgressIndicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_item_image_view"
            app:layout_constraintVertical_bias="0.14999998" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
